--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,5 +1,5 @@
-<div class="container mat-form-field-wrapper">
-  <form [formGroup]="formulario" (ngSubmit)="buscar()" class="mat-form-field form-inline">
+<div class="container">
+  <form [formGroup]="formulario" (ngSubmit)="buscar()">
     <mat-form-field class="form-group">
       <mat-label>{{placeholder}}</mat-label>
       <input matInput type="text" formControlName="terminoBusqueda">
