--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -5,10 +5,7 @@
   <!-- Tabla de Angular Material con la directiva mat-table y enlace a una fuente de datos -->
   <table mat-table [dataSource]="data">
     <!-- Itera sobre los metadatos de las columnas para definir las columnas de la tabla -->
-    <ng-container
-      [matColumnDef]="metaData.field"
-      *ngFor="let metaData of metaDataColumns"
-    >
+    <ng-container [matColumnDef]="metaData.field" *ngFor="let metaData of metaDataColumns">
       <th mat-header-cell *matHeaderCellDef>{{ metaData.title }}</th>
       <td mat-cell *matCellDef="let row">
         <!-- Verificar si el campo es una URL de imagen -->
@@ -21,6 +18,8 @@
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="listFields"></tr>
-    <tr mat-row *matRowDef="let row; columns: listFields" class="highLine"></tr>
+    <tr mat-row *matRowDef="let row; columns: listFields" class="highLine" [ngClass]="{'disabled': isRowDisabled(row)}"
+      [ngStyle]="{ 'background-color': isRowDisabled(row) ? 'lightgrey' : '' }">
+    </tr>
   </table>
 </div>
