--- a/src/app/instructores/components/form/form.component.css
+++ b/src/app/instructores/components/form/form.component.css
@@ -1,5 +1,6 @@
 .content {
   padding-top: 10px;
+  width: 570px;
 }
 .row {
   display: flex;
@@ -28,7 +29,7 @@ mat-toolbar {
 }
 
 .custom-upload-btn {
-  background-color: #2196f3; /* Cambia el color de fondo según tus preferencias */
+  background-color: #4758b8; /* Cambia el color de fondo según tus preferencias */
   color: #fff; /* Cambia el color del texto según tus preferencias */
   padding: 10px 15px;
   border: none;
@@ -53,6 +54,25 @@ mat-toolbar {
 .row img {
   max-width: 100%;
   max-height: 150px; /* Ajusta la altura máxima según tus necesidades */
-  margin-top: 10px; 
-  margin: 0 auto;/* Ajusta la altura máxima según tus necesidades */
+  margin-top: 10px;
+  margin: 0 auto; /* Ajusta la altura máxima según tus necesidades */
+}
+.file-format-info {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 10px;
+  display: flex;
+  padding: 10px 0 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.info-icon {
+  margin-left: 10px;
+}
+
+.info-icon i {
+  font-size: 24px;
+  color: #ffa726;
 }
