--- a/src/app/cursos/pages/page-list/page-list.component.html
+++ b/src/app/cursos/pages/page-list/page-list.component.html
@@ -19,23 +19,18 @@
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
           <!-- Botón de edición con tooltip -->
-          <button
-            mat-icon-button
-            color="primary"
-            (click)="openForm(row)"
-            matTooltip="EDITAR"
-          >
+          <button mat-icon-button color="primary" (click)="openForm(row)" matTooltip="EDITAR">
             <mat-icon>edit</mat-icon>
           </button>
           <!-- Botón de eliminación con tooltip -->
-          <button
+          <!-- <button
             mat-icon-button
             color="accent"
             (click)="delete(row.id_cur)"
             matTooltip="ELIMINAR"
           >
             <mat-icon>delete</mat-icon>
-          </button>
+          </button> -->
         </td>
       </ng-container>
     </cer-table>
