--- a/src/app/categorias/pages/page-list/page-list.component.html
+++ b/src/app/categorias/pages/page-list/page-list.component.html
@@ -9,7 +9,7 @@
       <!-- ng-container matColumnDef="actions": Definición de columna para acciones -->
       <ng-container matColumnDef="actions">
         <!-- th mat-header-cell: Celda de encabezado para acciones -->
-        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <th mat-header-cell *matHeaderCellDef>ACCIONES</th>
         <!-- td mat-cell: Celda de datos para acciones, incluye botones de editar y eliminar -->
         <td mat-cell *matCellDef="let row" class="alignButton">
           <!-- Botón de edición -->
