--- a/src/app/instructores/pages/page-list/page-list.component.html
+++ b/src/app/instructores/pages/page-list/page-list.component.html
@@ -8,7 +8,7 @@
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
       <!-- Definición de una columna adicional para acciones en la tabla -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <th mat-header-cell *matHeaderCellDef>ACCIONES</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
           <button
             mat-icon-button
