--- a/src/app/usuarios/pages/page-list/page-list.component.html
+++ b/src/app/usuarios/pages/page-list/page-list.component.html
@@ -7,7 +7,7 @@
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
       <!-- Definición de columna adicional llamada 'actions' -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <th mat-header-cell *matHeaderCellDef>ACCIONES</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
           <!-- Botón de edición con ícono 'edit' -->
           <button
